--- a/index.html
+++ b/index.html
@@ -142,9 +142,41 @@
             </div>   
         </div>    
         </div>
-
     <!-- end service -->
-
-
+    <!-- start Portfolio -->
+     <div class="Portfolio">
+        <div class="continer" >
+            <h2 class="special-heading">
+                Portfolio
+            </h2>
+            <p> If you do it right, it will last forever</p>
+            <div class="Portfolio-content">
+                <div class="card">
+                    <img src="images/portfolio-1.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>  My creative ability is very difficult to measure because 
+                        it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/portfolio-2.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>  My creative ability is very difficult to measure because 
+                        it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/portfolio-3.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>  My creative ability is very difficult to measure because 
+                        it can manifest in so many surprising and.</p>
+                    </div>
+            </div>
+        </div>
+     </div>
+    <!--End Portfolio  -->
 </body>
 </html>
