fourth section && some edit

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <!-- font Awesome -->
     <link rel="stylesheet" href="Css/all.min.css" />
     <!-- font google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-    href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     />
 </head>
 
@@ -144,7 +142,7 @@
         </div>
     <!-- end service -->
     <!-- start Portfolio -->
-     <div class="Portfolio">
+    <div id="protfolio" class="Portfolio">
         <div class="continer" >
             <h2 class="special-heading">
                 Portfolio
@@ -175,8 +173,44 @@
                         it can manifest in so many surprising and.</p>
                     </div>
             </div>
+         </div>
+      </div>
+    </div> 
+    <!--End Portfolio  -->
+    <!-- start About -->
+
+     <div id="About" class="About">
+        <div class="continer" >
+            <h2 class="special-heading">
+                About
+            </h2>
+            <p> bout Less is more work</p>
+            <div class="About-content">
+                <div class="imge">
+                    <img src="images/about.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dicta non asperiores minus accusamus, vel aperiam, inventore tempore rerum eius ipsam reiciendis! Velit vitae incidunt distinctio libero, ut voluptates aspernatur!</p>
+                <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dicta non asperiores minus accusamus, vel aperiam, inventore tempore rerum eius ipsam reiciendis! Velit vitae incidunt distinctio libero, ut voluptates aspernatur!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End About -->
+     <!--start contact  -->
+     <div id="contact" class="contact">
+        <div class="continer" >
+            <h2 class="special-heading">
+                contact
+            </h2>
+            <p> We are born to create</p>
+        </div>
+
+            <div></div>
         </div>
      </div>
-    <!--End Portfolio  -->
+     <!--End contact  -->
+
 </body>
 </html>
