--- a/index.html
+++ b/index.html
@@ -199,17 +199,33 @@
     </div>
     <!-- End About -->
      <!--start contact  -->
-     <div id="contact" class="contact">
+      <div id="contact" class="contact">
         <div class="continer" >
             <h2 class="special-heading">
                 contact
             </h2>
             <p> We are born to create</p>
-        </div>
-
-            <div></div>
-        </div>
+            <div class="contact-content">
+                <h1>Feel free to drop us a line at:</h1>
+               <a href="mailto:leonagency@mail.com?subject=contact" class="link">
+                leonagency@mail.com</a>
+                <div class="social">
+                    Find Us On Social Networks
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+            
+        </div>      
+    </div>
      </div>
+     <footer>
+        <div class="continer">
+            © 2024 <span>leon</span> , All Right Reversed
+        
+        </div>
+     </footer> 
      <!--End contact  -->
 
 </body>
